Some style fixes. Using compressed assets again

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 		<meta property="og:site_name" content="ASAP! A Simple Anonymous Plan"/>
 		<meta property="og:description" content="Create a simple anonymous todo list in a snap. No account needed, just click and go!" />
 		
-		<%= stylesheet_link_tag "reset", "screen" %>
+		<%= stylesheet_link_tag "reset.min", "screen.min" %>
 		
 		<!--[if IE]>
 			<meta http-equiv="imagetoolbar" content="no" />
@@ -43,7 +43,7 @@
 			</style>
 		<![endif]-->
 
-		<%= javascript_include_tag "mootools", "common" %>
+		<%= javascript_include_tag "mootools", "common.min" %>
 
 		<%= csrf_meta_tag %>
 		<title>ASAP! A Simple Anonymous Plan</title>
