--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -70,7 +70,7 @@ a {
 }
 
 	#create-list a {
-		background: #F7F9F8 url(/images/bg-pattern.png) 50% 50%;
+		background: #AE2A1B url(/images/bg-pattern.png) 50% 50%;
 		display: block;
 		font-family: Lobster, serif;
 		color: #fff;
