Removed chaining of animations. Using uncompressed JS files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 			</style>
 		<![endif]-->
 
-		<%= javascript_include_tag "mootools", "common.min" %>
+		<%= javascript_include_tag "mootools", "common" %>
 
 		<%= csrf_meta_tag %>
 		<title>ASAP! A Simple Anonymous Plan</title>
