--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 		<meta name="copyright" content="Oskar Krawczyk (nouincolor.com) and Bogusław Tolarz" />
 		
 		<!-- iPhone -->
-		<!-- <meta name="viewport" content="width=device-width, maximum-scale=1.0" /> -->
+		<meta name="viewport" content="width=device-width, maximum-scale=1.0; user-scalable=0" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-touch-fullscreen" content="yes" />
 		
@@ -32,7 +32,9 @@
 		<meta property="og:site_name" content="ASAP! A Simple Anonymous Plan"/>
 		<meta property="og:description" content="Create a simple anonymous todo list in a snap. No account needed, just click and go!" />
 		
-		<%= stylesheet_link_tag "reset.min", "screen.min" %>
+		<%= stylesheet_link_tag "reset", "screen", :cache => false  %>
+		<%= stylesheet_link_tag "iphone", :media => "only screen and (max-device-width: 480px)", :cache => false  %>
+		<%= yield :section_css %>
 		
 		<!--[if IE]>
 			<meta http-equiv="imagetoolbar" content="no" />
