--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :section_css do %>
+	<%= stylesheet_link_tag "iphone-section", :media => "only screen and (max-device-width: 480px)", :cache => false  %>
+<% end %>
+
 <% content_for :script do %>
 var todoLists = {
 		permalinkHash: '<%= @list.list_hash %>',
@@ -18,6 +22,21 @@ var todoLists = {
 			<% end %>
 		]
 };
+
+todoLists = {
+	active: [
+		{
+			id: 'asd',
+			title: 'Lorem ipsum sit amet dolor'
+		},
+	],
+	done: [
+			{
+				id: 'dsa',
+				title: 'Lorem ipsum sit amet dolor'
+			},
+	]
+}
 
 window.addEvents({
 	domready: function(){
@@ -48,22 +67,3 @@ window.addEvents({
 	<ul id="done-todo"></ul>
 	<p class="noTasks">You haven't finished any tasks, yet</p>
 </form> <!-- /new-todo -->
-
-<!-- <h1>List</h1>
-<p>Your list url: <strong><%= root_url %><%= list_path(@list.list_hash) %></strong></p>
-<%= form_for @list, :url => list_path(@list.list_hash) do |f| %>
-	<%= f.label :name %>
-	<%= f.text_field :name %>
-	<div>
-		<%= f.fields_for :list_items do |i| %>
-			<p><%= i.label :title %>
-			<%= i.text_field :title %>
-			<%= i.label :status %>
-			<%= i.check_box :status, {}, checked_value = "done", unchecked_value = nil %>
-			<%= i.label :_destroy %>
-			<%= i.check_box :_destroy %>
-			</p>
-		<% end %>
-	</div>
-	<%= f.submit %>
-<% end %> -->
