--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,8 @@
 		<meta property="og:site_name" content="ASAP! A Simple Anonymous Plan"/>
 		<meta property="og:description" content="Create a simple anonymous todo list in a snap. No account needed, just click and go!" />
 		
-		<%= stylesheet_link_tag "reset", "screen", :cache => false  %>
-		<%= stylesheet_link_tag "iphone", :media => "only screen and (max-device-width: 480px)", :cache => false  %>
+		<%= stylesheet_link_tag "reset.min", "screen.min", :cache => true  %>
+		<%= stylesheet_link_tag "iphone.min", :media => "only screen and (max-device-width: 480px)", :cache => true  %>
 		<%= yield :section_css %>
 		
 		<!--[if IE]>
@@ -45,7 +45,7 @@
 			</style>
 		<![endif]-->
 
-		<%= javascript_include_tag "mootools", "common" %>
+		<%= javascript_include_tag "mootools", "common.min" %>
 
 		<%= csrf_meta_tag %>
 		<title>ASAP! A Simple Anonymous Plan</title>
