--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,8 @@
 		<meta property="og:site_name" content="ASAP! A Simple Anonymous Plan"/>
 		<meta property="og:description" content="Create a simple anonymous todo list in a snap. No account needed, just click and go!" />
 		
-		<%= stylesheet_link_tag "reset.min", "screen.min", :cache => true  %>
-		<%= stylesheet_link_tag "iphone.min", :media => "only screen and (max-device-width: 480px)", :cache => true  %>
+		<%= stylesheet_link_tag "reset.min", "screen.min"  %>
+		<%= stylesheet_link_tag "iphone.min", :media => "only screen and (max-device-width: 480px)"  %>
 		<%= yield :section_css %>
 		
 		<!--[if IE]>
