--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :section_css do %>
-	<%= stylesheet_link_tag "iphone-section.min", :media => "only screen and (max-device-width: 480px)", :cache => false  %>
+	<%= stylesheet_link_tag "iphone-section.min", :media => "only screen and (max-device-width: 480px)"  %>
 <% end %>
 
 <% content_for :script do %>
