--- a/public/stylesheets/iphone.css
+++ b/public/stylesheets/iphone.css
@@ -13,35 +13,39 @@
 	margin-right: 12px;
 }
 
-.todoList ul li {
-	font-size: 1.8em;
-}
+	.todoList .noTasks {
+		font-size: 1.4em;
+	}
 
-.todoList ul li input[type='checkbox'] {
-	-webkit-appearance: none;
-	-webkit-border-radius: 4px;
-	background: #fff;
-	border: solid 2px #AD2A1A;
-	height: 34px;
-	width: 34px;
-}
+	.todoList ul li {
+		font-size: 1.8em;
+	}
 
-.todoList ul li input[type='checkbox']:checked {
-	background: #fff;
-	border: solid 2px #ADABA8;
-}
+		.todoList ul li input[type='checkbox'] {
+			-webkit-appearance: none;
+			-webkit-border-radius: 4px;
+			background: #fff;
+			border: solid 2px #AD2A1A;
+			height: 34px;
+			width: 34px;
+		}
 
-.todoList ul li input[type='checkbox']:checked:after {
-	content: ' ';
-	display: block;
-	width: 26px;
-	height: 26px;
-	background: #C9C7C5;
-	position: relative;
-	-webkit-border-radius: 2px;
-	top: 2px;
-	left: 2px;
-}
+		.todoList ul li input[type='checkbox']:checked {
+			background: #fff;
+			border: solid 2px #ADABA8;
+		}
+
+		.todoList ul li input[type='checkbox']:checked:after {
+			content: ' ';
+			display: block;
+			width: 26px;
+			height: 26px;
+			background: #C9C7C5;
+			position: relative;
+			-webkit-border-radius: 2px;
+			top: 2px;
+			left: 2px;
+		}
 
 #site-info {
 	margin: 70px 12px 0;
